--- a/sample1/child1/src/ejs/_header.ejs
+++ b/sample1/child1/src/ejs/_header.ejs
@@ -5,11 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>react-test</title>
+    <title>react test page</title>
 </head>
-<body>
-    <div>test</div>
-    <div id="root"></div>
-</body>
-</html>
-<script src="./main.js"/>
